# whatsthedamage

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  Dockerfile  Makefile  PRODUCT.md  README.md  README_ML.md  changelog.md  config.json.default  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  setup.py  tox.ini
.github/: copilot-instructions.md  general.instructions.md  javascript.instructions.md
.github/workflows/: docker-publish.yml  frontend-ci.yml  publish-to-test-pypi.yml  python-tox.yml
config/: README.md  exclusions.json
docs/: api-first-architecture.md  api-style-guide.md  calculator_pattern_example.py  conf.py  whatsthedamage.api.rst  whatsthedamage.config.rst  whatsthedamage.controllers.rst  whatsthedamage.models.api.rst  whatsthedamage.models.common.rst  whatsthedamage.models.domain.rst  whatsthedamage.models.rst  whatsthedamage.services.rst  whatsthedamage.utils.rst  whatsthedamage.view.rst
frontend/: README.md  eslint.config.js  gettext.config.cjs  index.html  knip.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.ts  vite-env.d.ts  vue-shim.d.ts
frontend/test/: BarChart.test.ts  highlight-config.test.ts  index.test.ts  regression.test.ts  setup.js  setup.ts  statistical-analysis.test.ts  statistical-controls-integration.test.ts  utils.test.ts
scripts/: extract_category_strings.py
src/whatsthedamage/: app.py  cli_app.py  config.py  csv_file_reader.py  csv_processor.py  csv_row.py  data_frame_formatter.py  date_converter.py  row_enrichment.py  row_filter.py  row_summarizer.py  rows_processor.py  whatsthedamage.py
tests/: api_fixtures.py  api_test_utils.py  conftest.py  helpers.py  test_api_v2_endpoints.py  test_config.py  test_csv_file_handler.py  test_csv_row.py  test_data_frame_formatter.py  test_date_converter.py  test_drilldown_api.py  test_drilldown_routes.py  test_dt_response_builder.py  test_error_handlers.py  test_file_upload_service.py  test_integration_datatables.py  test_machine_learning.py  test_ml_config_integration.py  test_routes.py  test_row_enrichment.py  test_row_enrichment_ml.py  test_row_enrichment_ml_confidence.py  test_row_filter.py  test_row_summarizer.py  test_rows_processor.py  test_statistical_controls.py
tests/models/: test_processing_request.py
(+272 files in other folders)
