[build-system]
requires = ["setuptools==80.10.2", "setuptools-scm==9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsthedamage"
dynamic = ["version"]
description = "A package to process bank account exports in CSV files. With optionally a web interface."
keywords = ["csv", "account", "report", "web"]
readme = "README.md"
authors = [
    { name = "Balázs NÉMETH", email = "balagetech@protonmail.com" }
]
maintainers = [
  {name = "Balázs NÉMETH", email = "balagetech@protonmail.com"}
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    'Operating System :: OS Independent',
]
license = "GPL-3.0-or-later"
requires-python = ">= 3.9"
dependencies = [
    "pandas==3.0.0",
    "pydantic==2.12.5",
    "python-magic==0.4.27",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "scipy==1.17.0",
]

[project.optional-dependencies]
dev = [
    "babel==2.17.0",
    "coverage==7.10.7",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "pip-tools==7.5.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "ruff==0.13.2",
    "sphinx-autodoc-typehints==3.2.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinx==8.2.3",
    "tox==4.25.0",
    "types-python-dateutil==2.9.0.20250822",
    "types-PyYAML==6.0.2",
    "vulture==2.14"
]
web = [
    "Flask-Caching==2.3.1",
    "Flask-WTF==1.2.2",
    "flask==3.1.2",
    "gunicorn==23.0.0",
    "lxml==6.0.1",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]

[project.scripts]
whatsthedamage = "whatsthedamage.cli_app:main"

[project.urls]
bugs = "https://github.com/abalage/whatsthedamage/issues"
changelog = "https://github.com/abalage/whatsthedamage/blob/master/changelog.md"
homepage = "https://github.com/abalage/whatsthedamage"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "src"
ignore_missing_imports = true
strict = true
warn_unreachable = true
warn_no_return = true
disable_error_code = ["misc", "unused-ignore"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 119

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true
verbose = false